--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="error_dialog_detail">Ha ocurrido un error obteniendo la información</string>
     <string name="try_again">Reintentar</string>
     <string name="movie_detail">Movie detail</string>
+    <string name="retry">Retry</string>
 </resources>
