--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,8 +3,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="popular">Popular</string>
+    <string name="popular_home"> _______________ Popular _______________</string>
     <string name="top_rated">Top Rated</string>
+    <string name="top_rated_home">______________ Top Rated ______________</string>
     <string name="upcoming">Upcoming</string>
+    <string name="upcoming_home">______________ Upcoming ______________</string>
     <string name="movie_title">Movie Title</string>
     <string name="movie_image">Movie Image</string>
     <string name="overview">Overview</string>
