--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,8 @@
     <string name="top_rated">Top Rated</string>
     <string name="top_rated_home">______________ Top Rated ______________</string>
     <string name="upcoming">Upcoming</string>
-    <string name="upcoming_home">______________ Upcoming ______________</string>
+<!--    <string name="upcoming_home">______________ Upcoming ______________</string>-->
+    <string name="upcoming_home">Upcoming</string>
     <string name="movie_title">Movie Title</string>
     <string name="movie_image">Movie Image</string>
     <string name="overview">Overview</string>
