--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,9 +2,9 @@
     <string name="app_name">Peli Cool App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="popular">Popular</string>
-    <string name="popular_home"> _______________ Popular _______________</string>
+    <string name="popular_home"> Popular</string>
     <string name="top_rated">Top Rated</string>
-    <string name="top_rated_home">______________ Top Rated ______________</string>
+    <string name="top_rated_home">Top Rated</string>
     <string name="upcoming">Upcoming</string>
 <!--    <string name="upcoming_home">______________ Upcoming ______________</string>-->
     <string name="upcoming_home">Upcoming</string>
@@ -19,10 +19,8 @@
     <string name="try_again">Retry</string>
     <string name="movie_detail">Movie detail</string>
     <string name="retry">Retry</string>
-    <string name="now_playing_home">____________ Now Playing ____________</string>
+    <string name="now_playing_home">Now Playing</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="ok">OK</string>
 </resources>
