--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,10 @@
     <string name="app_name">Peli Cool App</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="popular">Popular</string>
-    <string name="popular_home"> Popular</string>
     <string name="top_rated">Top Rated</string>
-    <string name="top_rated_home">Top Rated</string>
     <string name="upcoming">Upcoming</string>
-<!--    <string name="upcoming_home">______________ Upcoming ______________</string>-->
-    <string name="upcoming_home">Upcoming</string>
+    <string name="now_playing">Now Playing</string>
+    <!--    <string name="upcoming_home">______________ Upcoming ______________</string>-->
     <string name="movie_title">Movie Title</string>
     <string name="movie_image">Movie Image</string>
     <string name="overview">Overview</string>
@@ -16,11 +14,10 @@
     <string name="favourite">Favourite</string>
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">An error occurred while obtaining the information</string>
-    <string name="try_again">Retry</string>
     <string name="movie_detail">Movie detail</string>
     <string name="retry">Retry</string>
-    <string name="now_playing_home">Now Playing</string>
     <string name="home">Home</string>
     <string name="search">Search</string>
     <string name="ok">OK</string>
+    <string name="try_again">Try again</string>
 </resources>
