--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="search">Search</string>
     <string name="ok">OK</string>
     <string name="try_again">Try again</string>
+    <string name="my_list">My List</string>
 </resources>
