--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="ok">OK</string>
     <string name="try_again">Try again</string>
     <string name="my_list">My List</string>
+    <string name="gallery">Gallery</string>
 </resources>
