--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="try_again">Try again</string>
     <string name="my_list">My List</string>
     <string name="gallery">Gallery</string>
+    <string name="movie_item">Movie_item</string>
 </resources>
