--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="gallery">Gallery</string>
     <string name="movie_item">Movie_item</string>
     <string name="search_no_results">No movies found</string>
+    <string name="helper_search">Search a movie</string>
 </resources>
