improved check connection

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Peli Cool App</string>
 
@@ -36,4 +37,5 @@
 
     <string name="connection_restored">Se restableció la conexión</string>
     <string name="no_connection">Sin conexión a Internet</string>
+    <string name="rule_out">Descartar</string>
 </resources>
