--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,33 +1,41 @@
+
 <resources>
     <string name="app_name">Peli Cool App</string>
-    <!-- TODO: Remove or change this placeholder text -->
+
     <string name="popular">Popular</string>
     <string name="top_rated">Top Rated</string>
     <string name="upcoming">Upcoming</string>
     <string name="now_playing">Now Playing</string>
-    <!--    <string name="upcoming_home">______________ Upcoming ______________</string>-->
+
     <string name="movie_title">Movie Title</string>
     <string name="movie_image">Movie Image</string>
     <string name="overview">Overview</string>
     <string name="share">Share</string>
     <string name="bookmark">Bookmark</string>
     <string name="favourite">Favourite</string>
+    <string name="movie_detail">Movie detail</string>
+    <string name="movie_item">Movie_item</string>
+
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">An error occurred while obtaining the information</string>
-    <string name="movie_detail">Movie detail</string>
     <string name="retry">Retry</string>
-    <string name="home">Home</string>
-    <string name="search">Search</string>
-    <string name="ok">OK</string>
     <string name="try_again">Try again</string>
+    <string name="ok">OK</string>
+
+    <string name="home">Home</string>
     <string name="gallery">Gallery</string>
-    <string name="movie_item">Movie_item</string>
+    <string name="search">Search</string>
+
     <string name="search_no_results">No movies found</string>
     <string name="helper_search">Search a movie</string>
+
     <string name="peli_cool_app">Peli Cool App</string>
     <string name="logo_splash">Logo splash</string>
+
     <string name="removed_movie">Removed from MY LIST</string>
     <string name="added_movie">Added to MY LIST</string>
+
     <string name="connection_restored">Connection has been restored</string>
     <string name="no_connection">No internet connection</string>
+    <string name="rule_out">Rule Out</string>
 </resources>
