--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -15,6 +15,9 @@
     <string name="favourite">Favorito</string>
     <string name="movie_detail">Detalles</string>
     <string name="movie_item">Movie_item</string>
+    <string name="language">Lenguaje</string>
+    <string name="reviews">Reseñas</string>
+    <string name="released">Lanzamiento</string>
 
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">Ha ocurrido un error obteniendo la información</string>
