--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,9 @@
     <string name="favourite">Favourite</string>
     <string name="movie_detail">Movie detail</string>
     <string name="movie_item">Movie_item</string>
+    <string name="language">Language</string>
+    <string name="reviews">Reviews</string>
+    <string name="released">Released</string>
 
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">An error occurred while obtaining the information</string>
