--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -41,4 +41,6 @@
     <string name="connection_restored">Connection has been restored</string>
     <string name="no_connection">No internet connection</string>
     <string name="rule_out">Rule Out</string>
+
+    <string name="exit">Exit</string>
 </resources>
