Refactoring xml Bookmark and strings

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -43,4 +43,6 @@
     <string name="rule_out">Descartar</string>
 
     <string name="exit">Salir</string>
+
+    <string name="Homepage">Página web</string>
 </resources>
