Watch trailer in details added

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -44,5 +44,6 @@
 
     <string name="exit">Salir</string>
 
-    <string name="Homepage">Página web</string>
+    <string name="homepage">Página web</string>
+    <string name="watch_trailer">Ver trailer</string>
 </resources>
