Similar movies in details added

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -18,6 +18,10 @@
     <string name="language">Lenguaje</string>
     <string name="reviews">Reseñas</string>
     <string name="released">Lanzamiento</string>
+    <string name="homepage">Página web</string>
+    <string name="watch_trailer">Ver trailer</string>
+    <string name="similar">Más similares</string>
+    <string name="no_data">Sin Datos</string>
 
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">Ha ocurrido un error obteniendo la información</string>
@@ -44,6 +48,4 @@
 
     <string name="exit">Salir</string>
 
-    <string name="homepage">Página web</string>
-    <string name="watch_trailer">Ver trailer</string>
 </resources>
