--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,9 +15,13 @@
     <string name="favourite">Favourite</string>
     <string name="movie_detail">Movie detail</string>
     <string name="movie_item">Movie_item</string>
-    <string name="language">Language</string>
+    <string name="language">"Language "</string>
     <string name="reviews">Reviews</string>
     <string name="released">Released</string>
+    <string name="homepage">Homepage</string>
+    <string name="watch_trailer">watch trailer</string>
+    <string name="similar">Similar</string>
+    <string name="no_data">No Data</string>
 
     <string name="error_dialog">Error</string>
     <string name="error_dialog_detail">An error occurred while obtaining the information</string>
@@ -43,8 +47,5 @@
     <string name="rule_out">Rule Out</string>
 
     <string name="exit">Exit</string>
-
-    <string name="homepage">Homepage</string>
-    <string name="watch_trailer">watch trailer</string>
 
 </resources>
