--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -32,9 +32,9 @@
     <string name="home">Inicio</string>
     <string name="gallery">Próximamente</string>
     <string name="search">Buscar</string>
-
     <string name="search_no_results">No se encontraron películas</string>
     <string name="helper_search">Buscar una película</string>
+    <string name="the_most_wanted">Lo más buscado:</string>
 
     <string name="peli_cool_app">Peli Cool App</string>
     <string name="logo_splash">Logo splash</string>
