Improved error handling in Detail (option titles) and refactoring land orientation

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -62,5 +62,6 @@
     <string name="connectivity_error">Ocurrió un error mientras se ejecutaba su solicitud.</string>
     <string name="internet_error">Comprueba tu conexión a Internet e inténtalo de nuevo.</string>
     <string name="error_message">Mensaje de error</string>
+    <string name="update">Actualizar</string>
 
 </resources>
